Upgrade Java source/target from 8 to 17
- Apply instanceof pattern matching
- Add @Serial annotation to serialVersionUID fields
- Convert String.format to .formatted
- Replace Paths.get with Path.of
- Convert multiline strings to text blocks

All modules build successfully with JDK 17.